STEP-3 UseCase 'sendMessage'.
