# api/client.v1.swagger.yml
@@ -8,6 +8,25 @@ servers:
     description: Development server
 
 paths:
+  /sendMessage:
+    post:
+      description: Send new message to the chat.
+      parameters:
+        - $ref: "#/components/parameters/XRequestIDHeader"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SendMessageRequest"
+      responses:
+        '200':
+          description: Message created.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SendMessageResponse"
+
   /getHistory:
     post:
       description: Get chat history.
@@ -65,8 +84,52 @@ components:
     ErrorCode:
       type: integer
       description: contains HTTP error codes and specific business logic error codes (the last must be >= 1000).
-      # TODO: Конкретные коды появятся в следующем уроке.
+      enum:
+        - 1000
+        - 1001
+      x-enum-varnames:
+        - ErrorCodeCreateChatError
+        - ErrorCodeCreateProblemError
       minimum: 400
+
+    # /sendMessage
+
+    SendMessageRequest:
+      required: [ messageBody ]
+      properties:
+        messageBody:
+          type: string
+          minLength: 1
+          maxLength: 3000
+
+    SendMessageResponse:
+      properties:
+        data:
+          $ref: "#/components/schemas/MessageHeader"
+        error:
+          $ref: "#/components/schemas/Error"
+
+    MessageHeader:
+      # FIXME: Тесты помогут.
+      required: [ id, createdAt ]
+      properties:
+        id:
+          type: string
+          format: uuid
+          x-go-type: types.MessageID
+          x-go-name: ID
+          x-go-type-import:
+            path: "github.com/ekhvalov/bank-chat-service/internal/types"
+        authorId:
+          type: string
+          format: uuid
+          x-go-type: types.UserID
+          x-go-name: AuthorID
+          x-go-type-import:
+            path: "github.com/ekhvalov/bank-chat-service/internal/types"
+        createdAt:
+          type: string
+          format: date-time
 
     # /getHistory
 
@@ -80,7 +143,6 @@ components:
           type: string
 
     GetHistoryResponse:
-      required: [ data ]
       properties:
         data:
           $ref: "#/components/schemas/MessagesPage"
